scripts/nullaway/wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8.txt
../wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/Renderers/RayTracer.java:21: error: [NullAway] dereferenced expression camera is @Nullable
        image = new Image(camera.getXres(), camera.getYres());
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/Scene.java:30: error: [NullAway] assigning @Nullable expression to @NonNull field
        defaultCamera = null;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/Vectormath/Vector3.java:68: error: [NullAway] dereferenced expression a is @Nullable
        tmp.data[0] = a.data[0] + b.data[0];
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/Vectormath/Vector3.java:84: error: [NullAway] dereferenced expression b is @Nullable
        tmp.data[0] = a.data[0] + b.data[0] + c.data[0];
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/Vectormath/Vector3.java:306: error: [NullAway] dereferenced expression x is @Nullable
        result.data[0] = x.data[0] + b * y.data[0] + c * z.data[0];
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/PrimitiveGroup.java:208: error: [NullAway] dereferenced expression prim is @Nullable
        while (r > (double) prim.getArea() / (double) this.totalSurfaceArea) {
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/PathNode.java:28: error: [NullAway] assigning @Nullable expression to @NonNull field
        primitive = null;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/PathNode.java:94: error: [NullAway] dereferenced expression lightSource is @Nullable
        if (!lightSource.isLightSource())
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/Primitive.java:48: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.geometry = geom;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/Primitive.java:50: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.emission = emission;
                      ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
